fix: :bug: light scrollbars on firefox

--- a/public/resources/scss/index.scss
+++ b/public/resources/scss/index.scss
@@ -3372,7 +3372,7 @@ main.grid > a,
 }
 
 html {
-    scrollbar-color: var(--icon-hex) #323232;
+    scrollbar-color: var(--icon-hex) var(--header-hex);
 }
 
 body {
